Added a bunch of fixes. The template now automatically finds the correct name of the script, regardless of hash.

--- a/pages/templates/pages/books.html
+++ b/pages/templates/pages/books.html
@@ -9,6 +9,6 @@
 <body>
     <div id="root"></div>
     {% csrf_token %}
-    <script type="module" src="{% static 'scripts/book-collection/build/static/js/main.4161a196.js' %}"></script>
+    <script type="module" src="{% static 'scripts/book-collection/build/static/js/' %}{{ script_name }}"></script>
 </body>
 </html>
